# Tradlib

./: .gitignore  README.md  license.txt
diskmth/: LICENSE.txt  README.md  setup.cfg
diskmth/src/translator/: __init__.py  translator.py
diskmth/src/translator.egg-info/: PKG-INFO  SOURCES.txt
diskmth/tradlib/: __init__.py
diskmth/tradlib/tradlib/: tradlib.py
diskmth/translator/: __init__.py
diskmth/translator/translator.egg-info/: PKG-INFO  SOURCES.txt
scripts/uncompiled scripts/: build.bat  build.py  setup.bat
