[metadata]
name = translator
version = 0.3
author = Disk_MTH
description = A python library designed to allow an easy translation system for other projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Disk-MTH/Translator
project_urls =
    Bug Tracker = https://github.com/Disk-MTH/Translator/issues
classifiers =
	Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = translator
packages = find:
python_requires = >=2.7

[options.packages.find]
where = translator